operators/subscription/sample-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
  namespace: sample-app
spec:
  to:
    kind: Service
    name: sample-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
